--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <head>
-  
+  <meta http-equiv='refresh' content='0; URL=https://www.compensair.com/?utm_source=skynet'>
   <meta name="verify-admitad" content="faef9ec1f4" />
 </head>
